# HoughRectangle

./: .gitignore  CMakeLists.txt  readme.md
apps/: CMakeLists.txt  find_maximums.cpp  find_pairs.cpp  hough_transform.cpp  main_fast_rectangle_detect.cpp  main_hough_rectangle.cpp  main_hough_rectangle_centered.cpp  windowed_hough.cpp
docs/: Doxyfile  Doxyfile.bak
docs/html/: annotated.html  class_hough_rectangle-members.html  class_hough_rectangle.html  classes.html  config_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  index.html  io_8hpp_source.html  menudata.js  process__image_8hpp_source.html  struct_config-members.html  struct_config.html
docs/html/search/: all_0.js  all_1.js  all_3.js  all_7.js  classes_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
docs/latex/: annotated.tex  class_hough_rectangle.tex  refman.tex  struct_config.tex
include/: config.hpp  eigen_utils.hpp  io.hpp  process_image.hpp  rectangle_detection.hpp  rectangle_utils.hpp  recursive_hough_transform.hpp
src/: .HoughRectangle.cpp.swp  .io.cpp.swp  HoughRectangle.cpp  config.hpp  configs.json  eigen_utils.cpp  find_maximums.cpp  find_pairs.cpp  hough_transform.cpp  io.cpp  main_hough_rectangle.cpp  process_image.cpp  rectangle_detection.cpp  rectangle_utils.cpp  recursive_hough_transform.cpp  testConversionPointer.cpp  windowed_hough.cpp
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  test_apps.cpp
tests/unit_tests/: CMakeLists.txt  test_io.cpp  test_process_img.cpp  test_rectangle_utils.cpp
unit_test/: test.cpp  test_io.cpp  test_process_img.cpp
unit_tests/: CMakeLists.txt  test_io.cpp  test_process_img.cpp
utils/: create_img.py  create_rectangle.py  detect_edges.py  display.py  edgeDetect.py  visualise_maximums.py  visualise_pairs.py  visualise_rectangles.py  visualize_rectangles.py
